# ISSI_MLOps_lab1_hw

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  docker-compose.yaml  inference.py  main.py  pyproject.toml
