[project]
name = "issi-mlops-lab1-hw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clean-text>=0.7.1",
    "fastapi>=0.135.2",
    "joblib>=1.5.3",
    "pydantic>=2.12.5",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.3.0",
    "torch>=2.11.0",
    "uvicorn>=0.42.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
]
